--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "start": "node ./app.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.19"
   }
 }
