--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
   "dependencies": {
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.3",
     "express": "~4.16.1",
+    "install": "^0.13.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "npm": "^9.1.1"
   },
   "packageManager": "yarn@3.2.3"
 }
